crates/ports/tests/ui/embedding_lend_external_impl.stderr
error[E0277]: the trait bound `External: EmbeddingPort` is not satisfied
  --> tests/ui/embedding_lend_external_impl.rs:20:5
   |
20 | /     fn detect_dimension(
21 | |         &self,
22 | |         _ctx: &RequestContext,
23 | |         _request: DetectDimensionRequest,
24 | |     ) -> Self::Future<'_, u32> {
   | |______________________________^ unsatisfied trait bound
   |
help: the trait `EmbeddingPort` is not implemented for `External`
  --> tests/ui/embedding_lend_external_impl.rs:7:1
   |
 7 | struct External;
   | ^^^^^^^^^^^^^^^
   = note: required for `External` to implement `semantic_code_ports::embedding::sealed::Sealed`
note: required by a bound in `EmbeddingPortLend`
  --> src/embedding.rs
   |
   | pub trait EmbeddingPortLend: sealed::Sealed + Send + Sync {
   |                              ^^^^^^^^^^^^^^ required by this bound in `EmbeddingPortLend`
   = note: `EmbeddingPortLend` is a "sealed trait", because to implement it you also need to implement `semantic_code_ports::embedding::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following type implements the trait:
             T

error[E0277]: the trait bound `External: EmbeddingPort` is not satisfied
  --> tests/ui/embedding_lend_external_impl.rs:28:5
   |
28 |     fn embed(&self, _ctx: &RequestContext, _request: EmbedRequest) -> Self::Future<'_, EmbeddingVector> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `EmbeddingPort` is not implemented for `External`
  --> tests/ui/embedding_lend_external_impl.rs:7:1
   |
 7 | struct External;
   | ^^^^^^^^^^^^^^^
   = note: required for `External` to implement `semantic_code_ports::embedding::sealed::Sealed`
note: required by a bound in `EmbeddingPortLend`
  --> src/embedding.rs
   |
   | pub trait EmbeddingPortLend: sealed::Sealed + Send + Sync {
   |                              ^^^^^^^^^^^^^^ required by this bound in `EmbeddingPortLend`
   = note: `EmbeddingPortLend` is a "sealed trait", because to implement it you also need to implement `semantic_code_ports::embedding::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following type implements the trait:
             T

error[E0277]: the trait bound `External: EmbeddingPort` is not satisfied
  --> tests/ui/embedding_lend_external_impl.rs:32:5
   |
32 | /     fn embed_batch(
33 | |         &self,
34 | |         _ctx: &RequestContext,
35 | |         _request: EmbedBatchRequest,
36 | |     ) -> Self::Future<'_, Vec<EmbeddingVector>> {
   | |_______________________________________________^ unsatisfied trait bound
   |
help: the trait `EmbeddingPort` is not implemented for `External`
  --> tests/ui/embedding_lend_external_impl.rs:7:1
   |
 7 | struct External;
   | ^^^^^^^^^^^^^^^
   = note: required for `External` to implement `semantic_code_ports::embedding::sealed::Sealed`
note: required by a bound in `EmbeddingPortLend`
  --> src/embedding.rs
   |
   | pub trait EmbeddingPortLend: sealed::Sealed + Send + Sync {
   |                              ^^^^^^^^^^^^^^ required by this bound in `EmbeddingPortLend`
   = note: `EmbeddingPortLend` is a "sealed trait", because to implement it you also need to implement `semantic_code_ports::embedding::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following type implements the trait:
             T

error[E0277]: the trait bound `External: semantic_code_ports::embedding::sealed::Sealed` is not satisfied
 --> tests/ui/embedding_lend_external_impl.rs:9:28
  |
9 | impl EmbeddingPortLend for External {
  |                            ^^^^^^^^ unsatisfied trait bound
  |
help: the trait `EmbeddingPort` is not implemented for `External`
 --> tests/ui/embedding_lend_external_impl.rs:7:1
  |
7 | struct External;
  | ^^^^^^^^^^^^^^^
  = note: required for `External` to implement `semantic_code_ports::embedding::sealed::Sealed`
note: required by a bound in `EmbeddingPortLend`
 --> src/embedding.rs
  |
  | pub trait EmbeddingPortLend: sealed::Sealed + Send + Sync {
  |                              ^^^^^^^^^^^^^^ required by this bound in `EmbeddingPortLend`
  = note: `EmbeddingPortLend` is a "sealed trait", because to implement it you also need to implement `semantic_code_ports::embedding::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following type implements the trait:
            T
